Version 4.7 (22 September 2013)
  * Removed leading zero in package number. i.e., 4.7 instead of 4.07.
  * better handling of nearly constant time series, and nearly linear time series
  * improved handling of missing values in rwf()
  * corrected fitted values and residuals in meanf() for time series data
  * bats() and tbats() now handle missing values in the same way as ets(). i.e., using longest contiguous portion.
  * better handling of very short time series
  * initial states for ets() modified for very short time series (less than 3 years).
  * nsdiffs with CH test now handles degenerate cases without returning an error.
  * nnetar now handles missing values
  * Fixed bug in forecast.varest() so residuals and fitted values computed correctly.
  * Added accuracy() calculation for VAR models
  * Fixed a bug in simulate.fracdiff() when future=TRUE. Sometimes the future argument was being ignored.

Version 4.06 (30 June 2013)
  * accuracy() was returning a mape and mpe 100 times too large for in-sample errors.

Version 4.05 (19 June 2013)
  * Fixed bug in hw() so it works when initial="simple"
  * Allowed bats() and tbats() to take non-positive values.
  * ets() now calls optim direct via c code making ets() run much faster.
  * Added Rmalschains as a possible optimizer in ets(). Not documented.
  * Modified forecast.lm so it is more likely that the original data are stored in the returned object.
  * Corrected bug in forecast.Arima that occurred when a Box-Cox transformation was used with bootstrap=TRUE.
  * accuracy() updated so that it gives more information, and returns a matrix of both test and training measures.
  * Corrected training error measures for splinef() forecasts.

Version 4.04 (22 April 2013)
  * Added ylim argument to Acf()
  * Avoided clash with the signal package when using auto.arima().
  * Fixed problem in plot.forecast() when all historical data are NA or when there is no available historical data.